--- a/scripts/Assignment_3-EDA_Report.Rmd
+++ b/scripts/Assignment_3-EDA_Report.Rmd
@@ -2,14 +2,13 @@
 title: "EDA of Spanish electricity generation 2015-2018"
 subtitle: 'Group 17: Time Series - Assignment 3 - EDA Report'
 output:
-  html_document: 
+  pdf_document:
+    toc: no
+    toc_depth: '2'
+  html_document:
     toc: yes
     toc_depth: 2
     fig_caption: yes
-  # html_notebook:
-  #   toc: yes
-  #   toc_depth: 2
-  #   toc_float: no
 ---
 
 ```{r setup, include=FALSE}
@@ -91,7 +90,7 @@ This report is accompanied by an [online dashboard](https://danielpetterson.shin
 
 *1-3 pages, 6 marks*
 
-We chose to study a time series dataset about electricity generation in Spain over a four-year period. This data originally comes the "ENTSO-E Transparency Platform" dashboard (<https://transparency.entsoe.eu/dashboard/show>). ENTSO stands for *European Network of Transmission System Operators for Electricity*, and this website is the central collection and visualisation repository of electricity generation, transportation and consumption data across Europe. European Member States are required to submit this data to this platform. The data for Spain from the start of 2015 to the end of 2018 was collected from the dashboard and published on the data repository website Kaggle. This is where the data for this report was downloaded from (<https://www.kaggle.com/nicholasjhana/energy-consumption-generation-prices-and-weather>). *Chuck the links in this paragraph in footnotes?*
+We chose to study a time series dataset about electricity generation in Spain over a four-year period. This data originally comes from the "ENTSO-E Transparency Platform" dashboard (<https://transparency.entsoe.eu/dashboard/show>). ENTSO stands for *European Network of Transmission System Operators for Electricity*, and this website is the central collection and visualisation repository of electricity generation, transportation and consumption data across Europe. European Member States are required to submit this data to this platform. The data for Spain from the start of 2015 to the end of 2018 was collected from the dashboard and published on the data repository website Kaggle. This is where the data for this report was downloaded from (<https://www.kaggle.com/nicholasjhana/energy-consumption-generation-prices-and-weather>). *Chuck the links in this paragraph in footnotes?*
 
 The raw dataset from Kaggle contained variables for electricity consumption, generation, and pricing, recorded every hour of the four years, as well as day-ahead forecasts. For this exploration of the data, we limited our investigation to hourly electricity generation, which is divided into several different generation sources/methods.
 
@@ -109,7 +108,7 @@ As well as some missing values (discussed further below), we also discovered som
 ![](../figures/strange_zeros.png){width=80%}
 </center>
 
-Because they seem very unlikely to be true values, these outliers were removed. *We also identified two other rows were values were a significant departure from the typical range of that source, but were not equal to zero. These have not been removed because they could be plausible values.*
+Because they seem very unlikely to be true values, these outliers were removed. *We also identified two other rows where values were a significant departure from the typical range of that source, but were not equal to zero. These have not been removed because they could be plausible values.*
 
 After removing the outliers, each variable had between 18 and 22 missing values. Most of these missing values occurred across variables: there were 21 rows for which data for all or all but one variables were missing, and five rows in where only one variable was missing. In most cases, we were confident in imputing the missing values using linear interpolation. However, there was one area of slight concern: of the 26 rows with missing data, six of them are consecutive. The plots below show how this imputation affected some of the variables.
 
@@ -175,9 +174,9 @@ CV <- function(x) sd(x)/mean(x)
 f <- All(data_table) ~ Mean + SD + CV + Min + Median + Max + Histogram
 datasummary(f, data_table, output="markdown") # Previously output = "markdown"
 ```
-The table above shows summary statistics for every generation source in the dataset, ordered from largest to smallest mean hourly value. This allows a quick comparison of the magnitude and variability of each source. We can see that Nuclear has the largest average hourly generation. In addition to this, nuclear also has a relatively low standard error. This combination of high production and low variability, an important measure for understanding an electricity system, is best summarised by the coefficient of variation statistic (CV). Nuclear has the lowest CV out of all sources, 0.13. This statistic helps us understand the difference between intermittent sources (high CV, such as Solar and Wind Onshore), and continuous sources (low CV, such as Nuclear, Oil, and Gas).
+The table above shows summary statistics for every generation source in the dataset, ordered from largest to smallest mean hourly value. This allows a quick comparison of the magnitude and variability of each source. We can see that Nuclear has the largest average hourly generation, but a relatively low standard deviation. This combination of high production and low variability, an important measure for understanding an electricity system, is best summarised by the coefficient of variation (CV) statistic. Nuclear has the lowest CV out of all sources. This statistic helps us understand the difference between intermittent sources (high CV, such as Solar and Wind Onshore), and continuous sources (low CV, such as Nuclear, Oil, and Gas).
 
-As discussed in the Background section, understanding interdependencies between electricity generation sources is important to maintaining energy availability in the short- and medium-term, but also to manage energy transition in the long-term. Below the correlation plot we discuss the most interesting relationships in the dataset.
+As discussed in the Background section, understanding interdependencies between electricity generation sources is important to maintaining energy availability in the short- and medium-term, but also to manage energy transition in the long-term. We calculated correlations as a way of investigating relationships in the dataset.
 
 ```{r correlation plot, echo=FALSE, warning=FALSE}
 # Correlation plot
@@ -188,8 +187,6 @@ corrplot(corrmatrix, method = "color", addCoef.col="black", order = "FPC", numbe
 ```
 
 Nuclear, the largest overall contributor to electricity generation, does not have any significant correlations. Therefore, not only is Nuclear an incredibly steady generation source, it is also one that does not depend on or affect the amount of electricity produced by other sources. Solar, on the other hand, is a much more variable source, but this correlation plot shows it is also a very independent generation method.
-
-Hydro Pumped is negatively correlated with every other source (apart from Nuclear, with which there is insignificant positive correlation). This is because this source has the full name "pumped hydroelectric energy storage", and this source is used by electric power systems for load balancing. This is where excess or variable electricity is stored and released when demand is high - therefore, generation by this method is higher when other sources are lower.  
 
 The three least independent generation sources - those most related to other sources - are Hard Coal, Hydro River, and Other Renewable. The largest correlation in the dataset is a positive correlation of 0.77 between Hard Coal and Lignite. Lignite is another type of coal, so it makes sense that these two sources would change in tandem. Other correlations are investigated further in the discussion of the time series plots in the next section.
 
