Starting editing Ethics/Privacy/Security section

--- a/scripts/Assignment_3-EDA_Report.Rmd
+++ b/scripts/Assignment_3-EDA_Report.Rmd
@@ -105,15 +105,15 @@ This question is worth investigating due to the pressing global challenge of cli
 
 After removing the variables that were not relevant to our analysis, and those that contained no observations, the dataset contained hourly recordings of the amount of power generated from 14 different sources in Spain between 2015 and 2019. The definitions of each of these sources are reasonably self-explanatory, and we have expanded in further detail during our analysis when it is helpful.
 
-As well as some missing values (discussed further below), we also discovered some outliers. Interestingly, these occurred across variables at the exact same timestamps. Specifically, we identified 3 rows in the raw dataset in which all but one generation source recorded a value of 0. This is shown in the plot below:
+As well as some missing values (discussed further below), we also discovered some outliers. Interestingly, these occurred across variables at the exact same timestamps. Specifically, we identified 3 rows in the raw dataset in which all but one generation source recorded a value of 0. This is shown by the three negative spikes in the plot below:
 
 <center>
 ![](../figures/strange_zeros.png){width=80%}
 </center>
 
-Because they seem very unlikely to be true values, these outliers were removed. *We also identified two other rows where values were a significant departure from the typical range of that source, but were not equal to zero. These have not been removed because they could be plausible values.*
+Because they seem very unlikely to be true values, these outliers were removed. *We also identified two other rows where values were a significant departure from the typical range of that source, but were not equal to zero. These have not been removed because they could be plausible values (**confirm whether we are OK with this, otherwise I (Dan W) am happy to remove these too**)*
 
-After removing the outliers, each variable had between 18 and 22 missing values. Most of these missing values occurred across variables: there were 21 rows for which data for all or all but one variables were missing, and five rows in where only one variable was missing. In most cases, we were confident in imputing the missing values using linear interpolation. However, there was one area of slight concern: of the 26 rows with missing data, six of them are consecutive. The plots below show how this imputation affected some of the variables.
+After removing the outliers, each variable had between 18 and 22 missing values. Most of these missing values occurred across variables: there were 21 rows for which data for all or all but one variables were missing, and five rows in where only one variable was missing. In most cases, we were confident in imputing the missing values using linear interpolation. However, there was one area of slight concern: of the 26 rows with missing data, six of them are consecutive. The plots below show how this imputation affected two of the variables.
 
 ```{r interpolation plot 1}
 # Creating interpolation indicator vars
@@ -133,17 +133,17 @@ ggplot(data[50:150,]) + geom_point(aes(x= time, y = `Gas`, colour = interp_solar
 data <- data %>% select(-c(interp_gas, interp_solar))
 ```
 
-The linear interpolation over the adjacent missing values in the Gas variable looks as if it may also result in (very minor) distortion of the fluctuation in this variable, but it is less obvious than for Solar.
+The linear interpolation over the adjacent missing values in the Gas variable looks as if it may also result in some distortion of the fluctuation in this variable, but it is less obvious than for Solar.
 
-Overall, despite linear interpolation not following the trend of the data for some variables, this gap represents a very small proportion of each time series, so we were content to make this small distortion of the data and apply the method.
+Overall, despite linear interpolation not following the trend of the data for some variables, this gap represents a very small proportion of each time series (less than 0.02% of the series), so we were content to make this small distortion of the data and apply the interpolation method consistently across each variable.
 
 # Ethics, Privacy, and Security
 
 ## Ethics
 
-While there is no intention to utilize this study for any purpose beyond academic, the ethical concerns relating to this project entirely come from possible uses and interpretations of the outputs of this study in the real world. Primarily these would relate to political decisions of national energy policy and investment. Spain has an established nuclear sector which has had opposition since the 1950s when the government initially announced its intentions to develop the capability (<https://en.wikipedia.org/wiki/Anti-nuclear_movement_in_Spain> ). The arguments against nuclear largely focus on the hazardous waste, potential consequences of disaster and association with weapons of mass destruction. If this paper were utilized to argue for further development of Spain's nuclear power industry, considerations surrounding these concerns must be considered. Similarly, there are growing concerns surround hydrocarbon-based fuel sources and the impact on climate and air quality, this study specifically makes no recommendations however should people decide to develop hydrocarbon-based energy sources they would need to consider the ethics of the impacts on the environment. Interestingly the existence of global warming is a political and, in some ways, ethical issue and so this would also need to be considered if information from this study were used to support or disprove it.
+While there is no intention to utilize this study for any purpose beyond academic, the ethical concerns relating to this project entirely come from possible uses and interpretations of the outputs of this study in the real world. Primarily, these would relate to political decisions of national energy policy and investment. Spain has an established nuclear sector which has had opposition since the 1950s when the government initially announced its intentions to develop the capability (<https://en.wikipedia.org/wiki/Anti-nuclear_movement_in_Spain> ). The arguments against nuclear largely focus on the hazardous waste, potential consequences of disaster, and association with weapons of mass destruction. If this paper were utilized to argue for further development of Spain's nuclear power industry, these concerns must be considered. Similarly, as mentioned in [Background and Data], there are growing concerns around hydrocarbon-based fuel sources and their impact on climate and air quality. This study specifically makes no recommendations, but if people decide to develop hydrocarbon-based energy sources they should consider the ethics of their impact on the environment. Therefore, global warming is both a political and, in some ways, an ethical issue, and so this would also need to be considered if information from this study were used to support any decisions made about this global challenge.
 
-Any decisions relating to a change in the energy sector would impact people in several ways beyond the ethical concerns relating to the technology. Any modelling completed from this data is at a national level and so assumes a uniform complete accessibility to energy from all sources, this is inherently not the case. If the government decided to shift to a non-diversified energy model or banned local diesel generators there is the small possibility that areas, most likely rural, would no longer have access to electricity and have an adverse effect on these people lives. More likely is where, due to political pressure, the government chooses to invest in a more expensive source of energy, for example due to a drive to achieve a higher proportion of green energy ( <https://www.theguardian.com/environment/2019/jun/14/power-to-the-people-how-spanish-cities-took-control-of-energy> ). Pushing power prices up would disproportionately affect people from a lower socioeconomic background and fuel a growing divide between the classes and creating a growing poverty in the country. This could be further exacerbated if with the investment in new technology automation is increased, leading to greater efficiency at the cost of lower skilled jobs, again disproportionately affecting the lower socioeconomic class.
+There are ethical issues to consider beyond technology and climate change as well, in terms of the effect of energy sector policy on people. Any modelling completed from this data is at a national level and so assumes a uniform complete accessibility to energy from all sources, this is inherently not the case. If the government decided to shift to a non-diversified energy model or banned local diesel generators there is the small possibility that areas, most likely rural, would no longer have access to electricity and have an adverse effect on these people lives. More likely is where, due to political pressure, the government chooses to invest in a more expensive source of energy, for example due to a drive to achieve a higher proportion of green energy ( <https://www.theguardian.com/environment/2019/jun/14/power-to-the-people-how-spanish-cities-took-control-of-energy> ). Pushing power prices up would disproportionately affect people from a lower socioeconomic background and fuel a growing divide between the classes and creating a growing poverty in the country. This could be further exacerbated if with the investment in new technology automation is increased, leading to greater efficiency at the cost of lower skilled jobs, again disproportionately affecting the lower socioeconomic class.
 
 There is a small risk of the creation of feedback cycles relating to the above concerns. This would only occur if decisions made based on the results of this study created a negative affect as discussed above, which was then integrated into another model which the further exacerbated the issue in turn. As this study is a non-reactive one off and there is no intention to base decision making upon the models of this exercise, the concern of feedback loops has been considered outside the remit of the ethical concerns of this study.
 
@@ -282,5 +282,6 @@ Daniel W:
 
 - Investigated and wrote about outliers and effect of linear interpolation
 - Investigated and wrote about correlations, long-term trends and seasonality 
+- Proof-read and edited Ethics, Privacy and Security section.
 
 # Conclusion
